--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
   }
   
   #number-input {
-    width: 350px;
+    width: 200px;
     height: 60px;
     text-align: center;
     margin: 1.5%;
@@ -15,6 +15,7 @@
   }
   
   h1 {
+    font-size: 20px;
     margin: 50px;
   }
   
@@ -26,13 +27,6 @@
       font-size: 16px;
     padding-top: 10px;
   }
-  
-  img {
-    width: 400px;
-    height: 350px;
-    margin-top: 50px;
-  }
-  
   
   
   
