--- a/public/index.css
+++ b/public/index.css
@@ -3,20 +3,13 @@
     text-align: center;
   }
   
-  #number-input {
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    margin: 1.5%;
-  }
-  
   p, h1, h4, .btn {
-    margin: 10px;
+    margin: 0px;
   }
   
   h1 {
     font-size: 20px;
-    margin: 50px;
+    margin: 20px;
   }
   
   .background {
@@ -25,7 +18,32 @@
   
   p {
       font-size: 16px;
-    padding-top: 10px;
+      padding-top: 0px;
+  }
+
+  p.github {
+    font-size: 8px;
+    margin-top: 10px;
+    text-align: right;
+  }
+  
+  .instruction {
+    text-align: left;
+  }
+  
+  ul {
+    text-align: left;
+  }
+
+  .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
   
   
