--- a/test1_set1/test1_set1.css
+++ b/test1_set1/test1_set1.css
@@ -5,20 +5,50 @@
 .items {
   display: flex;
   flex-direction: row;
-  padding-top: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   gap: 10vw;
   justify-content: center;
   width:100%;
 }
 
-.images {
-  max-width:100%;
+.thumbnails {
+  width: 30px;
+  /* margin: 0 auto; */
 }
 
-.instructions {
+table {
+  width: 100%;
+  margin: 0;
+} 
+
+td, th {
   text-align: center;
-  /* font-size:10vw; */
+  padding-bottom: 15px;
+}
+
+.images {
+  max-width:90%;
+}
+
+h1 {
+  text-align: center;
+  font-size:30px;
   width:100%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
 }
 
   
