--- a/public/index.css
+++ b/public/index.css
@@ -39,10 +39,12 @@
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
+    margin: auto;
+    display: flex;
+    justify-content: center;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
   }
   
