--- a/test1_set1/test1_set1.css
+++ b/test1_set1/test1_set1.css
@@ -31,6 +31,12 @@ td, th {
   max-width:90%;
 }
 
+#selectNow {
+  text-align: center;
+  color: red;
+  
+}
+
 h1 {
   text-align: center;
   font-size:30px;
