--- a/public/index.css
+++ b/public/index.css
@@ -42,7 +42,8 @@
     margin: auto;
     display: flex;
     justify-content: center;
-    padding: 15px 32px;
+    margin-top: 50px;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
