--- a/public/index.css
+++ b/public/index.css
@@ -42,11 +42,17 @@
     margin: auto;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
-    padding: 10px 20px;
+    margin-top: 20px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+  }
+
+  #button_wrapper {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
   }
   
   
