--- a/test1_vibration/option1/test1_set1/test1_set1_instructions.css
+++ b/test1_vibration/option1/test1_set1/test1_set1_instructions.css
@@ -1,6 +1,12 @@
 /* * {
   border: thin red solid;
 } */
+body {
+  visibility: hidden;
+}
+#timerExplanation {
+  visibility: visible;
+}
 #timer {
   justify-content: right;
   text-align: right;
@@ -8,9 +14,18 @@
 }
 #timerButton {
   z-index: 1;
-  justify-content: right;
-  position: absolute;
-  float: right;
+  visibility: visible;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
 }
 
 .items {
