--- a/test1_vibration/option2/test1_set2/test1_set2_instructions.css
+++ b/test1_vibration/option2/test1_set2/test1_set2_instructions.css
@@ -1,16 +1,33 @@
 /* * {
   border: thin red solid;
 } */
+body {
+  visibility: hidden;
+}
+#timerExplanation {
+  visibility: visible;
+}
 #timer {
   justify-content: right;
   text-align: right;
   color: red;
+  margin-top: 0;
+  margin-bottom: -5%;
 }
 #timerButton {
   z-index: 1;
-  justify-content: right;
-  position: absolute;
-  float: right;
+  visibility: visible;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
 }
 
 .items {
