--- a/test2_gestures/gestures.css
+++ b/test2_gestures/gestures.css
@@ -4,16 +4,12 @@
 
 .items {
     display: flex;
-    flex-direction: row;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    gap: 10vw;
     justify-content: center;
-    width:100%;
+    width:74px;
   }
   
   .thumbnails {
-    width: 30px;
+    width: 10px;
     /* margin: 0 auto; */
   }
   
@@ -67,15 +63,38 @@
   }
 
   .square {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border-style: solid;
+    padding: 50px;
+    gap: 30px;
     width:50%;
-    height: 275px;
+  }
+
+  .square2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: solid;
+    padding:139px 0;
+    gap: 30px;
+    width:50%;
   }
 
   #parent {
       display:flex;
       background-color: lightgrey;
   }
+
+  #top-right {
+    text-align: center;
+    width:50%;
+  }
+
+  
 
 
  
