--- a/test2_gestures/gestures.css
+++ b/test2_gestures/gestures.css
@@ -1,7 +1,34 @@
 /* * {
   border: thin red solid;
 } */
-
+#timerExplanation {
+  visibility: visible;
+}
+#timer {
+  justify-content: right;
+  text-align: right;
+  color: red;
+  margin-top: 0;
+  margin-bottom: -5%;
+}
+#timerButton {
+  z-index: 1;
+  visibility: visible;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+body {
+  visibility: hidden;
+}
 .slide {
   /* layout */
   display: flex;
