--- a/public/index.css
+++ b/public/index.css
@@ -29,6 +29,8 @@
   
   .instruction {
     text-align: left;
+    margin-bottom: 10px;
+    margin-left:7px;
   }
   
   ul {
@@ -54,6 +56,10 @@
     display: flex;
     gap: 30px;
     justify-content: center;
+  }
+
+  .list {
+    margin-right: 15px;
   }
   
   
