--- a/test2_gestures/test2_set1/gestures.css
+++ b/test2_gestures/test2_set1/gestures.css
@@ -201,6 +201,10 @@ li {
     width:50%;
   }
 
+  .text-center {
+    text-align: center;
+  }
+
   .square2 {
     display: flex;
     flex-direction: column;
