--- a/test2_gestures/test2_set2/gestures.css
+++ b/test2_gestures/test2_set2/gestures.css
@@ -4,6 +4,9 @@
 #timerExplanation {
   visibility: visible;
 }
+#timerExplanation_1 {
+  visibility: visible;
+}
 #timer {
   justify-content: right;
   text-align: right;
