--- a/test2_gestures/test2_set1/gestures.css
+++ b/test2_gestures/test2_set1/gestures.css
@@ -10,6 +10,9 @@
 #timerExplanation {
   visibility: visible;
 }
+#timerExplanation_1 {
+  visibility: visible;
+}
 #timer {
   justify-content: right;
   text-align: right;
