--- a/test2_gestures/test2_set2/gestures_instructions.css
+++ b/test2_gestures/test2_set2/gestures_instructions.css
@@ -1,6 +1,6 @@
-/* * {
+* {
   border: thin red solid;
-} */
+}
 #timerExplanation {
   visibility: visible;
 }
@@ -222,6 +222,9 @@ li {
     width:50%;
   }
 
+  .margin-bottom {
+    margin-bottom:0px;
+  }
   
 
 
