--- a/test2_gestures/test2_set2/gestures_instructions.css
+++ b/test2_gestures/test2_set2/gestures_instructions.css
@@ -34,12 +34,13 @@ body {
   display: flex;
   flex-wrap: nowrap;
   overflow: hidden;
-position: relative;
+  position: relative;
   width: 100%;
   user-select: none;
 }
 .slide_item {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
